tests/conformance/typecheck/valid/narrowing_union.ks
fun f(x: Int | Bool): Int = if (x is Int) { x + 1 } else { 0 }
