tests/conformance/typecheck/invalid/continue_outside_loop.ks
// EXPECT: continue
// EXPECT: loop
fun f(): Unit = { continue }
